# Game-From-Scratch

./: CMakeLists.txt  GameObject.cpp  README.md  Texture.cpp  main.cpp  mesh.cpp  shader.cpp  window.cpp
Physics/: BoxCollider.cpp  BoxCollider.h  Physics.cpp  Physics.h  SphereCollider.cpp  SphereCollider.h
inc/: GameObject.h  Shader.h  Texture.h  Transform.h  camera.h  mesh.h  window.h
